--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-    "name": "weibo-images",
-    "version": "0.0.1",
-    "description": "Batch download images from weibo",
-    "main": "app.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {},
-    "keywords": ["weibo", "images"],
-    "author": "LinCenYing",
-    "license": "MIT",
-    "dependencies": {
-        "async": "^0.9.0",
-        "cheerio": "^0.18.0",
-        "ejs": "^2.2.3",
-        "mkdirp": "^0.5.0",
-        "request": "^2.51.0",
-        "url": "^0.10.2",
-        "xml2js": "^0.4.4"
-    }
+  "name": "weibo-images",
+  "version": "0.0.1",
+  "description": "Batch download images from weibo",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {},
+  "keywords": [
+    "weibo",
+    "images"
+  ],
+  "author": "LinCenYing",
+  "license": "MIT",
+  "dependencies": {
+    "async": "^2.0.0-rc.5",
+    "cheerio": "^0.18.0",
+    "colors": "^1.1.2",
+    "ejs": "^2.2.3",
+    "mkdirp": "^0.5.0",
+    "request": "^2.51.0",
+    "url": "^0.10.2",
+    "xml2js": "^0.4.4"
+  }
 }
