--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "weibo-images",
+  "name": "spider",
   "version": "0.0.1",
-  "description": "Batch download images from weibo",
+  "description": "spider",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,10 +17,8 @@
     "async": "^2.0.0-rc.5",
     "cheerio": "^0.18.0",
     "colors": "^1.1.2",
-    "ejs": "^2.2.3",
     "mkdirp": "^0.5.0",
     "request": "^2.51.0",
-    "url": "^0.10.2",
-    "xml2js": "^0.4.4"
+    "url": "^0.10.2"
   }
 }
