--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "async": "^2.0.0-rc.5",
-    "cheerio": "^0.18.0",
+    "bluebird": "^3.4.0",
+    "cheerio": "^0.20.0",
     "colors": "^1.1.2",
     "mkdirp": "^0.5.0",
     "request": "^2.51.0",
